Actualizar carpeta Pokemon con build de React

--- a/index.html
+++ b/index.html
@@ -53,23 +53,22 @@
           </p>
         </a>
         <a href="WEB_TIEMPO/index.html" target="_blank" class="project project-tile">
-          <img class="project-image" src="eltiempo.png"
-            alt="project" />
+          <img class="project-image" src="eltiempo.png" alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
             Web el tiempo
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
-        <a href="https://codepen.io/freeCodeCamp/full/mVEJag" target="_blank" class="project project-tile">
-          <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg"
-            alt="project" />
+        <a href="dist/index.html" target="_blank" class="project project-tile">
+          <img class="project-image" src="Pokemon.png" alt="project" />
           <p class="project-title">
             <span class="code">&lt;</span>
-            Map Data Across the Globe
+            Pokedeck
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
+
         <a href="https://codepen.io/freeCodeCamp/full/wGqEga" target="_blank" class="project project-tile">
           <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png"
             alt="project" />
