--- a/index.html
+++ b/index.html
@@ -1,112 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ramón Mendoza Desarrollador Web</title>
+  <title>Ramón Mendoza - Desarrollador Web</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 <body>
   <div class="hero">
-    <nav id="navbar" class="nav">
-      <ul nav-list>
-        <li><a href="#welcome-section">Sobre mi</a></li>
-        <li><a href="#projects">Trabajo</a></li>
-        <li><a href="#contact">Contacto</a></li>
+    <nav id="navbar" class="navegacion">
+      <ul class="lista-navegacion">
+        <li><a href="#seccion-bienvenida">Sobre mí</a></li>
+        <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
 
-    <section id="welcome-section" class="welcome-section">
-      <h1>Soy Ramon Mendoza</h1>
-      <p>Soy estudiante de primer año del Grado Superior en Desarrollo de Aplicaciones Web en el IES Trassiera. Aunque
-        todavía estoy en las primeras etapas de mi formación, estoy profundamente apasionado por el mundo del desarrollo
-        web y ansioso por seguir aprendiendo. Estoy comprometido en adquirir nuevas habilidades y conocimientos para
-        convertirme en un desarrollador competente y eficaz. Mi entusiasmo por este campo me impulsa a enfrentar cada
-        desafío con determinación y a aprovechar todas las oportunidades para mejorar y crecer profesionalmente.
-      </p>
-      <p>
-        !!!AUN ME FALTA POR APRENDER, SE QUE ESTE PORFOLIO ES CUTRE, PERO ESTA HECHO CON COSAS APRENDIDAS POR INTERNET,
-        EL AÑO QUE VIENE CUANDO DE LAS ASIGNATURAS DE SEGUNDO SEGURO QUE MEJORAR!!!
-      </p>
+    <section id="seccion-bienvenida" class="seccion-bienvenida">
+      <div class="contenido-bienvenida">
+        <div class="texto-bienvenida">
+          <h1>Soy Ramón Mendoza</h1>
+          <p>¡Hola! Soy desarrollador web recién graduado del Grado Superior en Desarrollo de Aplicaciones Web en el IES Aguadulce. He completado los dos años de formación y estoy a la espera de realizar las prácticas.</p>
+          <p>Durante mi formación he desarrollado varios proyectos que me han permitido aprender HTML, CSS(Bootstrap, SASS), JavaScript(jQuery, React),PHP(Laravel), JAVA y otras tecnologías web. Me apasiona el desarrollo back-end y estoy ansioso por seguir aprendiendo y creciendo profesionalmente.</p>
+          <div class="destacado">
+            <i class="fas fa-lightbulb"></i>
+            Algunos de mis proyectos son antiguos y no represtan mi conocimiento actual, pero aun no he tenido tiempo de actualizarlos. Estoy trabajando en proyectos nuevos y actualizados Full-Stack.
+          </div>
+        </div>
+        <div class="imagen-bienvenida">
+          <img src="imgs/ramon.jpg" alt="Ramón Mendoza" />
+        </div>
+      </div>
     </section>
 
-    <section id="projects" class="projects-section">
-      <h2 class="projects-section-header">Estos son algunos de mis proyectos</h2>
-
-      <div class="projects-grid">
-        <a href="web-pelis-series/index.html" target="_blank" class="project project-tile">
-          <img class="project-image" src="visor.png" alt="project" />
-          <p class="project-title">
-            <span class="code">&lt;</span>
-            Visor de Peliculas y Series
-            <span class="code">&#47;&gt;</span>
-          </p>
-        </a>
-        <a href="PPT/PPT.html" target="_blank" class="project project-tile">
-          <img class="project-image" src="ppt.png" alt="project" />
-          <p class="project-title">
-            <span class="code">&lt;</span>
-            Pierdra, Papel o Tijera
-            <span class="code">&#47;&gt;</span>
-          </p>
-        </a>
-        <a href="WEB_TIEMPO/index.html" target="_blank" class="project project-tile">
-          <img class="project-image" src="eltiempo.png" alt="project" />
-          <p class="project-title">
-            <span class="code">&lt;</span>
-            Web el tiempo
-            <span class="code">&#47;&gt;</span>
-          </p>
-        </a>
-        <a href="dist/index.html" target="_blank" class="project project-tile">
-          <img class="project-image" src="Pokemon.png" alt="project" />
-          <p class="project-title">
-            <span class="code">&lt;</span>
-            Pokedeck
-            <span class="code">&#47;&gt;</span>
-          </p>
-        </a>
-
-        <a href="https://codepen.io/freeCodeCamp/full/wGqEga" target="_blank" class="project project-tile">
-          <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png"
-            alt="project" />
-          <p class="project-title">
-            <span class="code">&lt;</span>
-            Wikipedia Viewer
-            <span class="code">&#47;&gt;</span>
-          </p>
-        </a>
-        <a href="3_en_raya/3enRaya.html" target="_blank" class="project project-tile">
-          <img class="project-image" src="3_raya.png" alt="project" />
-          <p class="project-title">
-            <span class="code">&lt;</span>
-            Tres en Raya
-            <span class="code">&#47;&gt;</span>
-          </p>
-        </a>
+    <section id="proyectos" class="seccion-proyectos">
+      <div class="encabezado-proyectos">
+        <h2>Mis Proyectos</h2>
+        <p>Aquí tienes algunos de los proyectos que he desarrollado durante mi formación</p>
       </div>
 
-      <a href="https://codepen.io/FreeCodeCamp/" class="btn btn-show-all" target="_blank">Mostar todos<i
-          class="fas fa-chevron-right"></i></a>
+      <div class="grid-proyectos">
+        <a href="web-pelis-series/index.html" target="_blank" class="proyecto">
+          <img class="imagen-proyecto" src="imgs/visor.png" alt="Visor de Películas y Series" />
+          <div class="contenido-proyecto">
+            <p class="titulo-proyecto">
+              <span class="codigo"><</span>
+              Visor de Películas y Series
+              <span class="codigo">/></span>
+            </p>
+            <p class="descripcion-proyecto">Aplicación web para buscar y visualizar información de películas y series</p>
+            <div class="tecnologias">
+              <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
+              <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
+              <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
+              <img src="imgs/jquery-original.svg" alt="jQuery" class="icono-tecnologia" title="jQuery">
+            </div>
+          </div>
+        </a>
+
+        <a href="PPT/PPT.html" target="_blank" class="proyecto">
+          <img class="imagen-proyecto" src="imgs/ppt.png" alt="Piedra, Papel o Tijera" />
+          <div class="contenido-proyecto">
+            <p class="titulo-proyecto">
+              <span class="codigo"><</span>
+              Piedra, Papel o Tijera
+              <span class="codigo">/></span>
+            </p>
+            <p class="descripcion-proyecto">Juego clásico de piedra, papel o tijera con interfaz interactiva</p>
+            <div class="tecnologias">
+              <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
+              <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
+              <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
+            </div>
+          </div>
+        </a>
+
+        <a href="WEB_TIEMPO/index.html" target="_blank" class="proyecto">
+          <img class="imagen-proyecto" src="imgs/eltiempo.png" alt="Web del Tiempo" />
+          <div class="contenido-proyecto">
+            <p class="titulo-proyecto">
+              <span class="codigo"><</span>
+              Web del Tiempo
+              <span class="codigo">/></span>
+            </p>
+            <p class="descripcion-proyecto">Aplicación para consultar el clima en tiempo real</p>
+            <div class="tecnologias">
+              <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
+              <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
+              <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
+              <img src="imgs/jquery-original.svg" alt="jQuery" class="icono-tecnologia" title="jQuery">
+            </div>
+          </div>
+        </a>
+
+        <a href="dist/index.html" target="_blank" class="proyecto">
+          <img class="imagen-proyecto" src="imgs/Pokemon.png" alt="Pokedeck" />
+          <div class="contenido-proyecto">
+            <p class="titulo-proyecto">
+              <span class="codigo"><</span>
+              Pokedeck
+              <span class="codigo">/></span>
+            </p>
+            <p class="descripcion-proyecto">Aplicación para explorar y gestionar cartas de Pokémon</p>
+            <div class="tecnologias">
+              <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
+              <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
+              <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
+              <img src="imgs/react-original.svg" alt="React" class="icono-tecnologia" title="React">
+            </div>
+          </div>
+        </a>
+
+        <a href="3_en_raya/3enRaya.html" target="_blank" class="proyecto">
+          <img class="imagen-proyecto" src="imgs/3_raya.png" alt="Tres en Raya" />
+          <div class="contenido-proyecto">
+            <p class="titulo-proyecto">
+              <span class="codigo"><</span>
+              Tres en Raya
+              <span class="codigo">/></span>
+            </p>
+            <p class="descripcion-proyecto">Juego clásico del tres en raya con diseño retro</p>
+            <div class="tecnologias">
+              <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
+              <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
+              <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
+            </div>
+          </div>
+        </a>
+      </div>
     </section>
 
-    <section id="contact" class="contact-section">
-      <div class="contact-section-header">
-        <h2>Trabajemos juntos...</h2>
-        <p>contactos</p>
+    <section id="contacto" class="seccion-contacto">
+      <div class="encabezado-contacto">
+        <h2>Trabajemos juntos</h2>
+        <p>¿Te gustaría trabajar conmigo? ¡No dudes en contactarme!</p>
       </div>
-      <div class="contact-links">
+      <div class="enlaces-contacto">
         <a href="https://www.linkedin.com/in/ram%C3%B3n-mendoza-candelario-8894252a9/" target="_blank"
-          class="btn contact-details"><i class="fab fa-facebook-square"></i> LinkedIn </a>
-        <a id="profile-link" href="https://github.com/Ramonmendoza13" target="_blank" class="btn contact-details"><i
-            class="fab fa-github"></i> GitHub</a>
-        <a href="https://x.com/Ramon_mc02" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i>
-          Twitter</a>
-        <a href="/cdn-cgi/l/email-protection#187d60797568747d587d60797568747d367b7775" class="btn contact-details"><i
-            class="fas fa-at"></i> Enviame un mail</a>
-        <a href="tel:684129148" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Llamame</a>
+          class="detalles-contacto">
+          <i class="fab fa-linkedin"></i>
+          LinkedIn
+        </a>
+        <a href="https://github.com/Ramonmendoza13" target="_blank" class="detalles-contacto">
+          <i class="fab fa-github"></i>
+          GitHub
+        </a>
+        <a href="mailto:ramonm828@gmail.com" class="detalles-contacto">
+          <i class="fas fa-envelope"></i>
+          Enviar Email
+        </a>
+        <a href="tel:684129148" class="detalles-contacto">
+          <i class="fas fa-phone"></i>
+          Llamar
+        </a>
       </div>
     </section>
   </div>
