Añadir botón para descargar CV en PDF

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         <h1>Soy Ramón Mendoza</h1>
         <p>¡Hola! Soy desarrollador web recién graduado del Grado Superior en Desarrollo de Aplicaciones Web en el IES Aguadulce. He completado los dos años de formación y estoy a la espera de realizar las prácticas.</p>
         <p>Durante mi formación he desarrollado varios proyectos que me han permitido aprender HTML, CSS(Bootstrap, SASS), JavaScript(jQuery, React),PHP(Laravel), JAVA y otras tecnologías web. Me apasiona el desarrollo back-end y estoy ansioso por seguir aprendiendo y creciendo profesionalmente.</p>
+        
+        <div class="boton-cv">
+          <a href="CV_Ramon_Mendoza.pdf" download class="btn-descargar-cv">
+            <i class="fas fa-download"></i>
+            Descargar CV
+          </a>
+        </div>
+        
         <div class="destacado">
           <i class="fas fa-lightbulb"></i>
           Algunos de mis proyectos son antiguos y no represtan mi conocimiento actual, pero aun no he tenido tiempo de actualizarlos. Estoy trabajando en proyectos nuevos y actualizados Full-Stack.
