--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="grid-proyectos">
-      <a href="web-pelis-series/index.html" target="_blank" class="proyecto">
+      <a href="https://ramonmendoza13.github.io/web-series-pelis/" target="_blank" class="proyecto">
         <img class="imagen-proyecto" src="imgs/visor.png" alt="Visor de Películas y Series" />
         <div class="contenido-proyecto">
           <p class="titulo-proyecto">
@@ -61,23 +61,26 @@
           </p>
           <p class="descripcion-proyecto">Aplicación web para buscar y visualizar información de películas y series</p>
           <div class="tecnologias">
-            <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
-            <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
-            <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
-            <img src="imgs/jquery-original.svg" alt="jQuery" class="icono-tecnologia" title="jQuery">
+            <div class="iconos-tecnologia">
+              <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
+              <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
+              <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
+              <img src="imgs/jquery-original.svg" alt="jQuery" class="icono-tecnologia" title="jQuery">
+            </div>
+        
           </div>
         </div>
       </a>
 
-      <a href="PPT/PPT.html" target="_blank" class="proyecto">
-        <img class="imagen-proyecto" src="imgs/ppt.png" alt="Piedra, Papel o Tijera" />
+      <a href="https://ramonmendoza13.github.io/MiniJuegos/" target="_blank" class="proyecto">
+        <img class="imagen-proyecto" src="imgs/minijuegos.png" alt="Piedra, Papel o Tijera" />
         <div class="contenido-proyecto">
           <p class="titulo-proyecto">
             <span class="codigo"><</span>
-            Piedra, Papel o Tijera
+           MinuJuegos clasico
             <span class="codigo">/></span>
           </p>
-          <p class="descripcion-proyecto">Juego clásico de piedra, papel o tijera con interfaz interactiva</p>
+          <p class="descripcion-proyecto">Juegos clásico como piedra, papel o tijera y 3 en raya (mas adelante se añadirán mas juegos)</p>
           <div class="tecnologias">
             <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
             <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
@@ -86,7 +89,7 @@
         </div>
       </a>
 
-      <a href="WEB_TIEMPO/index.html" target="_blank" class="proyecto">
+      <a href="https://ramonmendoza13.github.io/web-tiempo/" target="_blank" class="proyecto">
         <img class="imagen-proyecto" src="imgs/eltiempo.png" alt="Web del Tiempo" />
         <div class="contenido-proyecto">
           <p class="titulo-proyecto">
@@ -104,7 +107,7 @@
         </div>
       </a>
 
-      <a href="dist/index.html" target="_blank" class="proyecto">
+      <a href="https://ramonmendoza13.github.io/PokeDeckDeploy/" target="_blank" class="proyecto">
         <img class="imagen-proyecto" src="imgs/Pokemon.png" alt="Pokedeck" />
         <div class="contenido-proyecto">
           <p class="titulo-proyecto">
@@ -118,26 +121,12 @@
             <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
             <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
             <img src="imgs/react-original.svg" alt="React" class="icono-tecnologia" title="React">
+
           </div>
         </div>
       </a>
 
-      <a href="3_en_raya/3enRaya.html" target="_blank" class="proyecto">
-        <img class="imagen-proyecto" src="imgs/3_raya.png" alt="Tres en Raya" />
-        <div class="contenido-proyecto">
-          <p class="titulo-proyecto">
-            <span class="codigo"><</span>
-            Tres en Raya
-            <span class="codigo">/></span>
-          </p>
-          <p class="descripcion-proyecto">Juego clásico del tres en raya con diseño retro</p>
-          <div class="tecnologias">
-            <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
-            <img src="imgs/css3-original.svg" alt="CSS3" class="icono-tecnologia" title="CSS3">
-            <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
-          </div>
-        </div>
-      </a>
+      
     </div>
   </section>
 
