Actualizar info de VisorReact

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       gap: 10px !important;
       margin-top: auto !important;
     }
-    .btn-demo, .btn-repo {
+
+    .btn-demo,
+    .btn-repo {
       flex: 1 !important;
       padding: 10px 15px !important;
       border-radius: 6px !important;
@@ -28,11 +30,13 @@
       justify-content: center !important;
       gap: 6px !important;
     }
+
     .btn-demo {
       background: #2563eb !important;
       color: white !important;
       border: 2px solid #2563eb !important;
     }
+
     .btn-repo {
       background: transparent !important;
       color: #333 !important;
@@ -92,13 +96,13 @@
           <p class="titulo-proyecto">
             <span class="codigo">VISOR (REACT) /></span>
           </p>
-          <p class="descripcion-proyecto">Aplicación web para buscar y visualizar información de películas y series</p>
+          <p class="descripcion-proyecto">Aplicación web para buscar y visualizar información de películas y series
+            conectada a una API en laravel para que cada usuario tenga su propia watchlist.</p>
           <div class="tecnologias">
             <div class="iconos-tecnologia">
-              <img src="imgs/html5-original.svg" alt="HTML5" class="icono-tecnologia" title="HTML5">
-              <img src="imgs/javascript-original.svg" alt="JavaScript" class="icono-tecnologia" title="JavaScript">
               <img src="imgs/react-original.svg" alt="React" class="icono-tecnologia" title="React">
               <img src="imgs/Tailwind_CSS_Logo.svg" alt="Tailwind CSS" class="icono-tecnologia" title="Tailwind CSS">
+              <img src="imgs/laravel.svg" alt="Laravel" class="icono-tecnologia" title="Laravel">
             </div>
           </div>
           <div class="botones-proyecto">
@@ -121,7 +125,7 @@
             <span class="codigo"> Bajatel /></span>
           </p>
           <p class="descripcion-proyecto">Web Full-Stack que permite gestionar tarifas, contratar y crear para admins
-            (AUN EN DESARROLLO, le faltan funcionalidades por implementar)</p>
+          </p>
           <div class="tecnologias">
             <div class="iconos-tecnologia">
               <img src="imgs/jquery-original.svg" alt="jQuery" class="icono-tecnologia" title="jQuery">
