Actualizacion proyectos y pequeño rediseño

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img class="imagen-proyecto" src="imgs/visor1.png" alt="Nuevo Proyecto" />
         <div class="contenido-proyecto">
           <p class="titulo-proyecto">
-            <span class="codigo">VISOR (REACT) /></span>
+            <span class="codigo">VISOR /></span>
           </p>
           <p class="descripcion-proyecto">Aplicación web para buscar y visualizar información de películas y series
             conectada a una API en laravel para que cada usuario tenga su propia watchlist.</p>
