Actualizacion proyectos y pequeño rediseño

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img class="imagen-proyecto" src="imgs/visor1.png" alt="Nuevo Proyecto" />
         <div class="contenido-proyecto">
           <p class="titulo-proyecto">
-            <span class="codigo">VISOR /></span>
+            <span class="codigo">VISOR</span>
           </p>
           <p class="descripcion-proyecto">Aplicación web para buscar y visualizar información de películas y series
             conectada a una API en laravel para que cada usuario tenga su propia watchlist.</p>
@@ -83,7 +83,7 @@
         <img class="imagen-proyecto" src="imgs/bajatel.png" alt="bajatel" />
         <div class="contenido-proyecto">
           <p class="titulo-proyecto">
-            <span class="codigo"> Bajatel /></span>
+            <span class="codigo"> Bajatel </span>
           </p>
           <p class="descripcion-proyecto">Web Full-Stack que permite gestionar tarifas, contratar y crear para admins
           </p>
@@ -112,7 +112,7 @@
         <img class="imagen-proyecto" src="imgs/eltiempo.png" alt="Web del Tiempo" />
         <div class="contenido-proyecto">
           <p class="titulo-proyecto">
-            <span class="codigo"> Web del Tiempo /></span>
+            <span class="codigo"> Web del Tiempo </span>
           </p>
           <p class="descripcion-proyecto">Aplicación para consultar el clima en tiempo real</p>
           <div class="tecnologias">
